[tool.poetry]
name = "pytorch-experimentation"
version = "0.1.0"
description = ""
authors = ["Kyle Doidge <kyle.blue.nuttall@gmail.com>"]
readme = "README.md"
packages = [{include = "pytorch_experimentation"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
