[tool.poetry]
name = "pytorch-experimentation"
version = "0.1.0"
description = ""
authors = ["Kyle Doidge <kyle.blue.nuttall@gmail.com>"]
readme = "README.md"
packages = [{include = "pytorch_experimentation"}]

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.0.0"
torchvision = "^0.15.1"


[tool.poetry.group.dev.dependencies]
mypy = "^1.2.0"
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
